--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,11 @@
 $secondary-color:#125688;
-
+@import "node_modules/font-awesome/scss/font-awesome.scss";
 @import "node_modules/materialize-css/sass/materialize.scss";
-  
 body {
   background: #fafafa;
-  color: #125688;
+  color: $secondary-color;
 }
-#main-container
-{
+.landing {
   margin: 30px auto;
 }
 .iphone
@@ -26,9 +24,10 @@ body {
   padding: 10px 0;
   text-align: center;
 }
-.signup-box .apigram
+.apigram
 {
   font-size: 42px;
+  color: $secondary-color!important;
 }
 .signup-form {
   width: 65%;
@@ -47,5 +46,51 @@ body {
   background-color: #2d6599;
 }
 .signup-form .btn.btn-signup {
-  background-color: #125688;
+  background-color: $secondary-color;
+}
+
+.header {
+  background-color: white;
+  color: $secondary-color;
+  box-shadow: none;
+  border-bottom: 1px solid #edeeee;
+}
+.timeline {
+  padding: 30px 0;
+}
+$avatar-size: 48px;
+.avatar {
+  width: $avatar-size;
+  height: $avatar-size;
+  border-radius: 50%;
+  float: left;
+  margin-right: 12px;
+}
+.card small.time {
+  line-height: $avatar-size;
+}
+.card p {
+  padding: 20px 0;
+}
+.card likes {
+  line-height: 30px;
+  margin-left: 12px;
+}
+.card i {
+  font-size: 30px;
+}
+.card .fa-heart-o {
+  color: $secondary-color;
+}
+.card .fa-heart {
+  color: #f44336;
+  display: none;
+}
+.card.liked {
+  .fa-heart {
+    display: block;
+  }
+  .fa-heart-o {
+    display: none;
+  }
 }
