--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,8 @@ html
     meta(charset='utf-8')
     title=title
   body
+    section#header-container
     section#main-container
-    
     script(src='js/jquery-3.2.1.js')
     script(src='js/materialize.js')
     script(type='application/javascript' src='js/app.js')
